# constraint-theory-distributed

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
constraint_theory_core/: __init__.py  __main__.py  exercises.py  genre_brain.py  holonomy.py  lattice.py  metronome.py  rigidity.py  temporal.py
constraint_theory_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: DEVELOPER-GUIDE.md
examples/: deadband_funnel.py  full_pipeline.py  holonomy_verify.py  laman_graph.py  lattice_basics.py  metronome_consensus.py
rust/: Cargo.toml  README.md
rust/src/: cohomology.rs  lib.rs  living.rs  ornaments.rs  penrose.rs  rhythms.rs  scales.rs  tuning.rs
tests/: test_benchmark.py  test_edge_cases.py  test_exercises.py  test_holonomy.py  test_integration.py  test_lattice.py  test_metronome.py  test_property.py  test_rigidity.py  test_soft_snap.py  test_temporal.py
