[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constraint-theory-distributed"
version = "0.1.0"
description = "Unified geometric constraint theory — Eisenstein lattices, deadband funnels, Laman rigidity, holonomy consensus"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Forgemaster", email = "forgemaster@superinstance.ai"},
]
keywords = ["constraint-theory", "eisenstein", "laman", "rigidity", "deadband", "holonomy", "distributed-systems"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "pytest-benchmark>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.setuptools.packages.find]
where = ["."]
include = ["constraint_theory_core*"]
